...
		cell.detailTextLabel!.text = "\(playData.wordsCount.countForObject(word))"
		
		return cell
	}
	
	func searchTapped() {
		let ac = UIAlertController(title: "Filter...", message: nil, preferredStyle: .Alert)
		ac.addTextFieldWithConfigurationHandler(nil)
		
		ac.addAction(UIAlertAction(title: "Filter", style: .Default, handler: { [unowned self] _ in
			let userInput = ac.textFields?[0].text ?? "0"
			self.playData.applyUserFilter(userInput)
			self.tableView.reloadData()
			}))
		
		ac.addAction(UIAlertAction(title: "Cancel", style: .Cancel, handler: nil))
...
